[package]
name = "broker"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]

[lib]
name = "broker"

[[bin]]
name = "simple-server"

[[test]]
name = "tests"

[dependencies]
time = "0.1.37"
clap = "1"
log = "^0.3.2"
ansi_term = "0.9.0"
env_logger = "^0.3.1"
pretty_env_logger = "0.1.0"
threadpool = "1.3.2"
futures = "0.1"
tokio-core = "0.1"
net2 = "0.2.26"
mio = "0.6.2"
native-tls = "0.1"
tokio-tls = "0.1"

[dependencies.mqtt-protocol]
path = "../protocol"

[dev-dependencies]
rustc-serialize = "0.3"
tempdir = "0.3"
env_logger = { version = "0.3", default-features = false }
cfg-if = "0.1"

[target.'cfg(all(not(target_os = "macos"), not(windows)))'.dev-dependencies]
openssl = "0.9"

[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework = "0.1"

[dev-dependencies.mqtt-client]
path = "../client"
