[package]
name = "broker"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]

[lib]
name = "broker"

[[bin]]
name = "hub-server"

[[bin]]
name = "store-server"

[[test]]
name = "tests"

[dependencies]
time = "0.1.37"
clap = "1"
log = "^0.3.2"
bincode = "0.8"
bytes = "0.4"
byteorder = "1.0"
serde = "1.0"
serde_derive = "1.0"
ansi_term = "0.9.0"
env_logger = "^0.3.1"
threadpool = "1.3.2"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
net2 = "0.2.26"
mio = "0.6.2"
native-tls = "0.1"
tokio-tls = "0.1"

[dependencies.mqtt-protocol]
path = "../protocol"

[dev-dependencies]
rustc-serialize = "0.3"
tempdir = "0.3"
env_logger = { version = "0.3", default-features = false }
cfg-if = "0.1"

[target.'cfg(all(not(target_os = "macos"), not(windows)))'.dev-dependencies]
openssl = "0.9"

[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework = "0.1"

[dev-dependencies.mqtt-client]
path = "../client"
